force-app/main/default/objects/Course__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <label>Course</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>