force-app/main/default/objects/Course__c/fields/Enrolled_Students__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Students__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled Students</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>