force-app/main/default/objects/Course__c/fields/Time_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_Day__c</fullName>
    <label>Meets</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>